--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ font-family: 'Zen Tokyo Zoo', cursive; */
 
 #main-container{
     background-color: rgb(255, 255, 255);
-    height: 100vh;
+    /* height: 100vh; */
      
 }
 
